uma estrutura basica com controllers e model

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,43 +1,17 @@
-<style>
-    a:link,
-    a:visited
-    {
-        color: #0398CA;
-    }
+<div id="listar_posts">
+    
+    <dl class="post">
+        <dt>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dt>
+        <dd class="data">22 de julho, por Zé - 12 comentários</dd>
+        <dd class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo, nulla varius imperdiet molestie, ligula dui lobortis lacus, ut elementum purus libero non odio. Suspendisse luctus libero sit amet sem dignissim vel mattis tellus bibendum. Pellentesque malesuada lacus sed neque rhoncus...</dd>
+        <dd class="mais"><a href="" title="Continuar lendo...">➔</a></dd>
+    </dl>
+    
+    <dl class="post">
+        <dt>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dt>
+        <dd class="data">22 de julho, por Zé - 12 comentários</dd>
+        <dd class="texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo, nulla varius imperdiet molestie, ligula dui lobortis lacus, ut elementum purus libero non odio. Suspendisse luctus libero sit amet sem dignissim vel mattis tellus bibendum. Pellentesque malesuada lacus sed neque rhoncus...</dd>
+        <dd class="mais"><a href="" title="Continuar lendo...">➔</a></dd>
+    </dl>
 
-    span#zf-name
-    {
-        color: #91BE3F;
-    }
-
-    div#welcome
-    {
-        color: #FFFFFF;
-        background-image: url(http://framework.zend.com/images/bkg_header.jpg);
-        width:  600px;
-        height: 400px;
-        border: 2px solid #444444;
-        overflow: hidden;
-        text-align: center;
-    }
-
-    div#more-information
-    {
-        background-image: url(http://framework.zend.com/images/bkg_body-bottom.gif);
-        height: 100%;
-    }
-</style>
-<div id="welcome">
-    <h1>Welcome to the <span id="zf-name">Zend Framework!</span></h1>
-
-    <h3>This is your project's main page</h3>
-
-    <div id="more-information">
-        <p><img src="http://framework.zend.com/images/PoweredBy_ZF_4LightBG.png" /></p>
-        <p>
-            Helpful Links: <br />
-            <a href="http://framework.zend.com/">Zend Framework Website</a> |
-            <a href="http://framework.zend.com/manual/en/">Zend Framework Manual</a>
-        </p>
-    </div>
 </div>
